adding background image

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+  lang="en"
+  style="background-size: auto; background-image: url('download.jpg')"
+>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
